# Class-template-for-Images_LABPROG

./: .gitignore  CMakeLists.txt  README.md
images/: outputlandscape.ppm
images/output/: filtered.ppm  output.ppm  prova filtr.ppm
images/tests/: apollo.ppm_Test.ppm  bird2.ppm_Test.ppm  monument.ppm_Test.ppm  simmple-rgb.ppm
src/: Image.h  Kernel.cpp  Kernel.h  PPM_IO.cpp  PPM_IO.h  main.cpp
test/: CMakeLists.txt  ImageTests.cpp  KernelTests.cpp  PPM_IOTests.cpp  runAllTests.cpp  test_main.cpp
